--- a/index.html
+++ b/index.html
@@ -37,8 +37,33 @@
         <div class="image">
             This is a placeholder for an image.
         </div>
+    </div>
 
+    <div class="second-section">
 
+        <div class="sub-title">
+            Some random information
+        </div>
+
+        <div class="square-list">
+
+            <div class="square-item">
+                <div class="square"></div>
+                <div class="square-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="square-item">
+                <div class="square"></div>
+                <div class="square-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="square-item">
+                <div class="square"></div>
+                <div class="square-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="square-item">
+                <div class="square"></div>
+                <div class="square-subtext">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
 
     </div>
 </body>
