--- a/index.html
+++ b/index.html
@@ -66,5 +66,16 @@
         </div>
 
     </div>
+
+    <div class="third-section">
+
+        <div class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it loks nice.
+        </div>
+
+        <div class="sign">
+            -Thor, God of Thunder
+        </div>
+    </div>
 </body>
 </html>
