--- a/index.html
+++ b/index.html
@@ -77,5 +77,18 @@
             -Thor, God of Thunder
         </div>
     </div>
+
+    <div class="fourth-section">
+
+        <div class="panel">
+
+            <div class="panel-text">
+                <div class="panel-text-big">Call to action! It's time!</div>
+                <div class="panel-text-small">Sign up for our product by clicking that button right over there</div>
+            </div>
+
+            <button class="second-button">Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
