--- a/index.html
+++ b/index.html
@@ -90,5 +90,9 @@
             <button class="second-button">Sign up</button>
         </div>
     </div>
+
+    <div class="footer">
+        Copyright &copy; The Odin Project 2021
+    </div>
 </body>
 </html>
